[package]
name = "priority_container"
version = "0.1.1"
edition = "2021"
description = "Datastructure to find n biggest/smallest items within a large set"
license-file = "./LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
rand = "0.8.5"
criterion = "0.3.5"

[[bench]]
name = "bench"
harness = false
